# brainybishop

./: Cargo.toml  README.md  build.rs  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
benches/: board.rs
src/: bitboard.rs  board.rs  error.rs  eval.rs  lib.rs  magic.rs  main.rs  movegen.rs  tables.rs  uci.rs
src/board/: bitboard.rs  mod.rs
tests/: board.rs  perft.rs
