[package]
name = "brainybishop"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "board"
harness = false

